# ia-investing

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  MEMORY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  quality.yml
.opencode/: opencode.json  repomix.config.json
.opencode/agents/: ui-designer.md
.opencode/commands/: build.md  lint.md  tokenscope.md  typecheck.md
QUALITY/: PLAN.md  apps.md  backtesting.md  connectors.md  data_quality.md  database.md  evaluation.md  ia_investing.md  metrics.md  normalization.md  observability.md  parsers.md  portfolio.md  schemas.md  workflows.md
docker/: compose.test.yml  compose.yml
docker/otel/: config.yaml
docker/postgres/: init-databases.sh
docker/profiles/: test.env
docs/: API_AND_UI_MAP.md  END_TO_END_ACCEPTANCE.md  IMPLEMENTATION_AND_REAUDIT.md  RUNTIME_WIRING.md
docs/architecture/: target-composition.md
docs/audits/: 2026-07-21-reaudit.md
docs/runbooks/: agent-failure-runbook.md  release-gates.md
evals/agents/: v1.json
fix/: PENDENCIAS.md
infra/: otel-collector-config.yaml
migrations/: env.py
migrations/versions/: 0dbbf7d04806_versioned_agent_runtime.py  20260722_01_candidate_intelligence.py  (+33 more)
prompts/: coordinator-output.schema.json  registry.json  specialist-output.schema.json
scripts/: apply_targeted_edits.py  check_architecture.py  check_migration_graph.py  export_openapi.py  migration_progress.py  seed_eval_datasets.py  sync_agent_registry.py  test-infra.sh  validate_agent_evals.py  verify_agent_runtime.py  verify_e2e_idempotency.py  verify_institutional_backtest.py  verify_institutional_portfolio.py  verify_instrument_master.sql  verify_market_data_pit.py  verify_metric_lineage.py  verify_point_in_time_facts.py  verify_policy_paper_workflows.py  verify_quality_gate.py  verify_query_plans.py  verify_raw_zone.py  verify_temporal_approval.py  verify_valuation_replay.py
web/: .env.example  .gitignore  .prettierignore  AGENTS.md  Dockerfile  eslint.config.mjs  next.config.ts  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
(+686 files in other folders)
